@@ -16,6 +16,9 @@ Changes with Apache 2.3.15
      core: Fix integer overflow in ap_pregsub. This can be triggered e.g.
      with mod_setenvif via a malicious .htaccess. [Stefan Fritsch]
 
+  *) core, mod_dav_fs: Change default ETag to be "size mtime", i.e. remove
+     the inode. PR 49623. [Stefan Fritsch]
+
   *) mod_lua: Expose SSL variables via r:ssl_var_lookup().  [Eric Covener]
 
   *) mod_lua: LuaHook{AccessChecker,AuthChecker,CheckUserID,TranslateName}
